<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/opacityblack"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >



  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/gray_black1"
      android:elevation="40dp"
      android:padding="30dp"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/information_security"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="false"

        />
  </androidx.appcompat.widget.Toolbar>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="12dp"
    >


  <TextView
      android:id="@+id/description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginTop="12dp"
      android:text="@string/text_inf"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="@color/white_b"
      android:textAllCaps="false"


      />


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/vulnerabilities"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textAllCaps="false"

      android:textColor="@color/white"


      />


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/list_vulnerabilities"
      android:textSize="20sp"
      android:textColor="@color/white"
      android:layout_marginTop="10dp"
      android:textAllCaps="false"

      />


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/injection"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="@color/white"
      android:textAllCaps="false"


      />


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sql_practical"
      android:textSize="18sp"
      android:textColor="@color/white"
      android:layout_marginTop="6dp"
      android:textAllCaps="false"


      />


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sql"
      android:layout_marginTop="5dp"
      android:textSize="18sp"
      android:textColor="@color/black"
      android:background="@color/white"
      android:padding="8dp"
      android:textAllCaps="false"


      />


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/query"

      android:layout_marginTop="13dp"
      android:textSize="18sp"
      android:textColor="@color/white"
      android:textAllCaps="false"


      />


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sql_implement"

      android:layout_marginTop="7dp"
      android:textSize="18sp"
      android:textColor="@color/black"
      android:background="@color/white"
      android:padding="8dp"
      android:textAllCaps="false"

      />


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/result_sql"
      android:textSize="20sp"
      android:textColor="@color/white"
      android:textStyle="italic"
      android:layout_marginTop="8dp"
      android:textAllCaps="false"


      />




  <Button
      android:id="@+id/but_13"
      android:layout_width="wrap_content"
      android:layout_height="55dp"
      android:layout_marginLeft="10dp"
      android:layout_marginTop="20dp"
      android:backgroundTint="@color/gray_black1"
      android:text="@string/back_button"
      android:textAllCaps="false"
      android:textColor="@color/white_b"
      android:textSize="20sp"

      />




</LinearLayout>

</LinearLayout>
