<?xml version="1.0" encoding="UTF-8" ?>
<RelativeLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <ImageView
        android:id="@+id/imv_1"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:src="@drawable/cyper1"
        android:contentDescription="@string/cyber_image_desc"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cyber_learn"
        android:layout_below="@+id/imv_1"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textSize="30dp"
        android:textColor="@color/white_a"
        android:fontFamily="cursive"
        android:textStyle="bold"

        />



    <Button
        android:id="@+id/but_4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/os_sec"

        android:layout_below="@id/imv_1"
        android:layout_centerHorizontal="true"

        android:textSize="21sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginTop="50dp"

        />

    <Button
        android:id="@+id/but_2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/web_security"

        android:layout_below="@id/but_4"
        android:layout_centerHorizontal="true"


        android:textSize="20sp"
        android:textStyle="bold"

        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"

        />
    <Button
        android:id="@+id/but_3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/in_security"

        android:layout_below="@id/but_2"
        android:layout_centerHorizontal="true"


        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"

        />

    <TextView
        android:id="@+id/but_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/but_3"

        android:layout_marginTop="50dp"
        android:text="@string/back_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:padding="15dp"

        android:layout_alignParentStart="true"

        />




    <TextView
        android:id="@+id/but_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/but_3"
        android:padding="15dp"

        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="@string/library_button"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:layout_alignParentEnd="true"

        />

    <android.widget.Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="15sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/but_go"
        android:textAllCaps="false"

        android:background="@drawable/black"
        android:textColor="@color/white"
        />



</RelativeLayout>