<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailPasswordActivity"
    android:padding="16dp"

    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:titleTextColor="@android:color/black"
        android:background="@android:color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        >

        <TextView
            android:id="@+id/cyber_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cyber_learn"
            android:layout_below="@id/toolbar_1"

            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black1"
            />
    </androidx.appcompat.widget.Toolbar>

  <TextView
      android:id="@+id/welcome_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/welcome_plain"
      android:layout_below="@id/toolbar_1"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="40dp"
      android:textStyle="bold"
      android:textSize="24sp"
      android:textColor="@color/black"
      />

    <EditText
        android:id="@+id/email_edi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email2"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcome_tv"
        android:textAllCaps="false"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"

        android:textColor="@color/gray_black"
        android:textColorHint="@color/gray2"

        android:padding="12dp"
        android:background="@drawable/bg_email_password"

        />
    <EditText
        android:id="@+id/pass_edi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password2"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="20dp"
        android:layout_below="@id/email_edi"
        android:textAllCaps="false"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColor="@color/gray_black"
        android:textColorHint="@color/gray2"

        android:padding="12dp"
        android:background="@drawable/bg_email_password"

        />
    <android.widget.Button

        android:id="@+id/signIn_but"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@id/pass_edi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_primary"
        android:textStyle="bold"
        android:letterSpacing="0.05"

        />
    <android.widget.Button

        android:id="@+id/signup_but"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@id/signIn_but"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textColor="@color/primary"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_outline"
        android:textStyle="bold"
        android:letterSpacing="0.05"


        />




</RelativeLayout>