<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="25dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main"

        android:orientation="vertical"
        android:padding="10dp"


        >


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bar_vis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/visa"
                />

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Checkout"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/opacityblack"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"

            />

        <EditText
            android:id="@+id/ed_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textStyle="bold"
            android:inputType="text"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/white_bs"

            android:minHeight="50dp"

            />

        <EditText
            android:id="@+id/ed_enteremail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/white_bs"

            android:minHeight="48dp"
            android:layout_marginTop="8dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_with"
            android:layout_marginTop="20dp"
            android:textColor="@color/opacityblack"
            android:textStyle="bold"

            android:textSize="20sp"

            />

        <RadioGroup
            android:id="@+id/radioGroup"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <RadioButton
                android:id="@+id/radioCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Credit Card"
                android:textColor="@color/opacityblack"
                android:checked="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:minHeight="50dp"
                />

            <RadioButton
                android:id="@+id/radioPaypal"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="PayPal"
                android:textColor="@color/opacityblack"
                android:textStyle="bold"

                android:minHeight="48dp"/>
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/gray"

            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/expiration_date"
                android:minHeight="48dp"
                android:textColorHint="@color/gray"
                android:layout_weight="1"

                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="CVV"
                android:minHeight="48dp"
                android:textColorHint="@color/gray"
                android:layout_weight="1"

                android:layout_marginLeft="8dp"
                />
        </LinearLayout>

        <CheckBox
            android:id="@+id/box_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box"
            android:textColor="@color/opacityblack"
            android:textSize="17sp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"

            />

        <Button
            android:id="@+id/btn_PayNow"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_button"
            android:padding="5dp"
            android:textSize="20dp"
            android:backgroundTint="@color/blue"
            android:minHeight="48dp"

            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/texBack_visa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textSize="22sp"
            android:textColor="@color/red"
            android:padding="8dp"
            android:layout_margin="14dp"
            android:layout_gravity="center"
            />

    </LinearLayout>


</ScrollView>
