<?xml version="1.0" encoding="UTF-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/textv_1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="120dp"

        android:gravity="center_horizontal"

        android:hint="@string/welcome_cyberLearn"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColorHint="@color/opacityblack"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/imagv_1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/cyber_image_desc"

        android:src="@drawable/cyper1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textv_1"
        />

    <Button
        android:id="@+id/star_now"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/gray_black1"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagv_1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
